tests/compile_fail/mongo_invalid_type.stderr
error: FieldWitnesses only works with structs
 --> tests/compile_fail/mongo_invalid_type.rs:9:48
  |
9 | #[derive(Debug, Clone, Serialize, Deserialize, FieldWitnesses, MongoComparable)]
  |                                                ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FieldWitnesses` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive panicked
 --> tests/compile_fail/mongo_invalid_type.rs:9:64
  |
9 | #[derive(Debug, Clone, Serialize, Deserialize, FieldWitnesses, MongoComparable)]
  |                                                                ^^^^^^^^^^^^^^^
  |
  = help: message: DeriveMongoComparable only works on structs

warning: unused import: `nessus::mongo_comparable`
 --> tests/compile_fail/mongo_invalid_type.rs:4:5
  |
4 | use nessus::mongo_comparable;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `nessus::field_witnesses`
 --> tests/compile_fail/mongo_invalid_type.rs:5:5
  |
5 | use nessus::field_witnesses;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
